--- a/index.html
+++ b/index.html
@@ -7,24 +7,55 @@
   </head>
   <body>
 
-    <div id="header"><!--start of header-->
-        <h2>My Times</h2>
-      <nav>
-        <a href="#">World</a>
-        <a href="#">U.S.</a>
-        <a href="#">Tech</a>
-        <a href="#">Science</a>
-      </nav>
-    </div><!--end of header-->
+    <header><!--start of header-->
+      <div class="logo"><!--start of header-->
+        <img src="./resources/images/img-myt-logo.jpg" alt="MyTimes">
+          <span>My Times</span>
+
+        <nav>
+          <span><a href="#">World</a></span>
+          <span><a href="#">U.S.</a></span>
+          <span><a href="#">Tech</a></span>
+          <span><a href="#">Science</a></span>
+        </nav>
+      </div><!--end of header-->
+    </header><!--end of header-->
+
 
     <div class="container"><!--start of main container-->
 
+    <div class="column large"><!--start of large column-->
       <div class="article1"><!--start of article 1-->
 
-        <h1>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</h1>
+        <span>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</span>
 
         <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.</p>
       </div><!--end of article 1-->
+
+      <div class="article4"><!--start of article 4-->
+
+        <h1>Orca Spends Vacation at Land World Puget</h1>
+
+        <span>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</span>
+      </div><!--end of article 4-->
+
+      <div class="sidearticle1"><!--start of side artice 1-->
+        <span>Earth Spins Backwards for 2017</span>
+      </div><!--end of side article 1-->
+
+      <div class="article5"><!--start of article 5-->
+        <h1>Burger for Breakfast: How Early is too Early?</h1>
+
+        <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
+      </div><!--end of article 4-->
+
+      <div class="sidearticle2"><!--start of side article 2-->
+        <p>Research Shows Cameras Erase Memory</p>
+      </div><!--end of side article 2-->
+
+    </div><!--end of large column-->
+
+    <div class="column medium"><!--start of medium column-->
 
       <div class="article2"><!--start of article 2-->
         <h1>FBI Finds Action Star Guilty of False Advertising</h1>
@@ -38,31 +69,21 @@
         <p>BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.</p>
       </div><!--end of article 3-->
 
+    </div><!--end of medium column-->
+
+    <div class="column small"><!--start of small column-->
+
       <div class="sidebar"><!--start of sidebar-->
+        <div class="cookie">
+            <img src="./resources/images/img-news-bite.png" alt="News Bites">
+        </div>
+
         <h1>NEWS BITES</h1>
 
         <p>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials Finally a Top Secret Way You Can</p>
       </div><!--end of sidebar-->
+    </div><!--end of small column-->
 
-      <div class="article4"><!--start of article 4-->
-        <h1>Orca Spends Vacation at Land World Puget</h1>
-
-        <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
-      </div>
-
-      <div class="sidearticle1"><!--start of side artice 1-->
-        <p>Earth Spins Backwards for 2017</p>
-      </div><!--end of side article 1-->
-
-      <div class="article5"><!--start of article 5-->
-        <h1>Burger for Breakfast: How Early is too Early?</h1>
-
-        <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
-      </div><!--end of article 4-->
-
-      <div class="sidearticle2"><!--start of side article 2-->
-        <p>Research Shows Cameras Erase Memory</p>
-      </div><!--end of side article 2-->
 
 
     </div><!--end of main container-->
