--- a/index.html
+++ b/index.html
@@ -22,71 +22,91 @@
     </header><!--end of header-->
 
 
-    <div class="container"><!--start of main container-->
+  <div class="container"><!--start of main container-->
 
+      <!--First News Column-->
     <div class="column large"><!--start of large column-->
-      <div class="article1"><!--start of article 1-->
+      <div class="lead-story"><!--start of lead story-->
+          <div class="image content"><!--stat of image content-->
+              <span>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</span>
+          </div><!--end of image content-->
 
-        <span>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</span>
+        <p class="narative">MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.</p>
+      </div><!--end of lead story-->
 
-        <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.</p>
-      </div><!--end of article 1-->
+      <div class="stories"><!--start of stories-->
+          <div class="story"><!--start of story-->
+            <div class="text-content"><!--start of text content-->
+              <h2>Orca Spends Vacation at Land World Puget</h2>
+              <p class="narative">PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
+            </div><!--end of text content-->
+            <div class="fall-cancelled image content"><!--*-->
+              <span>Earth Spins Backwards for 2017</span>
+            </div><!--*-->
+          </div><!--end of story-->
 
-      <div class="article4"><!--start of article 4-->
-
-        <h1>Orca Spends Vacation at Land World Puget</h1>
-
-        <span>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</span>
-      </div><!--end of article 4-->
-
-      <div class="sidearticle1"><!--start of side artice 1-->
-        <span>Earth Spins Backwards for 2017</span>
-      </div><!--end of side article 1-->
-
-      <div class="article5"><!--start of article 5-->
-        <h1>Burger for Breakfast: How Early is too Early?</h1>
-
-        <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
-      </div><!--end of article 4-->
-
-      <div class="sidearticle2"><!--start of side article 2-->
-        <p>Research Shows Cameras Erase Memory</p>
-      </div><!--end of side article 2-->
-
+      <div class="story"><!--start of story-->
+        <div class="text-content"><!--*-->
+            <h2>Burger for Breakfast: How Early is too Early?</h2>
+            <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
+          </div><!--*-->
+          <div class="pop-culture image-content"><!--image content-->
+            <span>Research Shows Cameras Erase Memory</span>
+          </div><!--end image content-->
+        </div><!--end of story-->
+      </div><!--end of stories-->
     </div><!--end of large column-->
 
+    <!--Second News Column-->
+
     <div class="column medium"><!--start of medium column-->
+      <div class="story"><!--start of story-->
+        <div class="text-content"><!--*-->
+          <h2>FBI Finds Action Star Guilty of False Advertising</h2>
+          <p class="narative">WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...</p>
+        </div><!--*-->
+      </div><!--end of story-->
 
-      <div class="article2"><!--start of article 2-->
-        <h1>FBI Finds Action Star Guilty of False Advertising</h1>
-
-        <p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...</p>
-      </div><!--end of article 2-->
-
-      <div class="article3"><!--start of article 3-->
-        <p>Cats in Control-Is It a Thing?</p>
-
-        <p>BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.</p>
-      </div><!--end of article 3-->
-
+      <div class="story"><!--start of story-->
+        <div class="cat-ceo image content"><!--start of image content-->
+          <span>Cats in Control-Is It a Thing?</span>
+        </div><!-- end of image content-->
+        <p class="narative">BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.</p>
+      </div><!--end of story-->
     </div><!--end of medium column-->
 
+    <!--Third News Column-->
+
     <div class="column small"><!--start of small column-->
-
-      <div class="sidebar"><!--start of sidebar-->
-        <div class="cookie">
-            <img src="./resources/images/img-news-bite.png" alt="News Bites">
-        </div>
-
-        <h1>NEWS BITES</h1>
-
-        <p>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials Finally a Top Secret Way You Can</p>
-      </div><!--end of sidebar-->
+      <img class="cookie" src="./resources/images/img-news-bite.png" alt="News Bites">
+      <div class="new-bites">
+          <h3>NEWS BITES</h3>
+          <span class="bite">Cat Emoji Goes Viral</span>
+          <span class="bite">Buy Youtube Views</span>
+          <span class="bite">Home Business Advertising Ideas</span>
+          <span class="bite">Advertising Internet Online</span>
+          <span class="bite">Illustration in Marketing Materials</span>
+          <span class="bite">Finally a Top Secret Way You Can</span>
+      </div><!--end of news bites-->
     </div><!--end of small column-->
+  </div><!--end of main container-->
 
+  <!--Footer-->
 
-
-    </div><!--end of main container-->
+  <footer>
+    <div class="info"><!--start of info-->
+      <span class="title">My Times</span>
+      <nav><!--start of second nav-->
+        <span><a href="#">World</a></span>
+        <span><a href="#">U.S.</a></span>
+        <span><a href="#">Tech</a></span>
+        <span><a href="#">Science</a></span>
+      </nav><!--end of second nav-->    
+    </div><!--end of info-->
+    <div class="copyright"><!--start of copyright-->
+    #copy 2018, My Times (A Division of Codecademy bite)
+    </div><!--end copyright-->
+  </footer><!--end of footer-->
 
   </body>
 </html>
