--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <!--First News Column-->
     <div class="column large"><!--start of large column-->
       <div class="lead-story"><!--start of lead story-->
-          <div class="image content"><!--stat of image content-->
+          <div class="image-content"><!--stat of image content-->
               <span>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</span>
           </div><!--end of image content-->
 
@@ -40,7 +40,7 @@
               <h2>Orca Spends Vacation at Land World Puget</h2>
               <p class="narative">PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
             </div><!--end of text content-->
-            <div class="fall-cancelled image content"><!--*-->
+            <div class="fall-cancelled image-content"><!--*-->
               <span>Earth Spins Backwards for 2017</span>
             </div><!--*-->
           </div><!--end of story-->
@@ -68,7 +68,7 @@
       </div><!--end of story-->
 
       <div class="story"><!--start of story-->
-        <div class="cat-ceo image content"><!--start of image content-->
+        <div class="cat-ceo image-content"><!--start of image content-->
           <span>Cats in Control-Is It a Thing?</span>
         </div><!-- end of image content-->
         <p class="narative">BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.</p>
@@ -101,10 +101,10 @@
         <span><a href="#">U.S.</a></span>
         <span><a href="#">Tech</a></span>
         <span><a href="#">Science</a></span>
-      </nav><!--end of second nav-->    
+      </nav><!--end of second nav-->
     </div><!--end of info-->
     <div class="copyright"><!--start of copyright-->
-    #copy 2018, My Times (A Division of Codecademy bite)
+    &copy; 2018, My Times (A Division of Codecademy bite)
     </div><!--end copyright-->
   </footer><!--end of footer-->
 
